javaDSL/src/test/resources/typeSystemTestModels/valid/methods/MethodAbstractAndOtherModifiers.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.methods;

public abstract class MethodAbstractAndOtherModifiers {

  public abstract String getName();
}
